Basic Structure and Styling

--- a/app/views/pics/edit.html.haml
+++ b/app/views/pics/edit.html.haml
@@ -1,5 +1,5 @@
-%h1 Edit Pin
+.col-md-6.col-md-offset-3
+	%h1 Edit Pic
+	= render 'form'
 
-= render 'form'
-
-= link_to "Cancel", pic_path
+	= link_to "Cancel", pic_path
