--- a/app/views/pics/index.html.haml
+++ b/app/views/pics/index.html.haml
@@ -1,3 +1,8 @@
-- @pics.each do |pic|
-	= link_to (image_tag pic.image.url(:medium)), pic
-	%h2= link_to pic.title, pic
+#pics.transitions-enabled
+	- @pics.each do |pic|
+		.box.panel.panel-default
+			= link_to (image_tag pic.image.url), pic
+			%h2= link_to pic.title, pic
+			%p.user
+				Submitted by
+				= pic.user.email
