--- a/app/views/pics/show.html.haml
+++ b/app/views/pics/show.html.haml
@@ -1,12 +1,22 @@
-= image_tag @pic.image.url(:medium)
-%h1= @pic.title
-%p= @pic.description
-%p
-Submitted by 
-= @pic.user.email
+#pic_show.row
+	.col-md-8.col-md-offset-2
+		.panel.panel-default
+			.panel-heading.pic_image
+				= image_tag @pic.image.url(:medium)
+			.panel-body
+				%h1= @pic.title
+				%p= @pic.description
+				%p
+				Submitted by 
+				= @pic.user.email
+			.panel-footer
+				.row
+					.col-md-6
+						%p.user
+						Submitted by
+						=@pic.user.email
+					.col-md-6
+						.btn-group.pull-right
 
-%br/
-
-= link_to "Back", root_path
-= link_to "Edit", edit_pic_path
-= link_to "Delete", pic_path, method: :delete, data: { confirm: "Are you sure?"}
+							= link_to "Edit", edit_pic_path, class: "btn btn-default"
+							= link_to "Delete", pic_path, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-default"
