--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,9 +39,11 @@ nav {
 	}
 }
 
+
 #pics {
   margin: 0 auto;
   width: 100%;
+  vertical-align: top;
   .box {
 	  margin: 10px;
 	  width: 350px;
@@ -68,6 +70,7 @@ nav {
 	  }
 	}
 }
+
 
 #edit_page {
 	.current_image {
