--- a/app/views/pics/search_results.html.haml
+++ b/app/views/pics/search_results.html.haml
@@ -1,8 +1,9 @@
 %h2 Search Results for  
 %h1= params[:search_keywords]
 
+
 - if @found_pics.empty?
-	%p No Results Found
+	%p No Picture Results Found
 
 #pics.transitions-enabled
 	- @found_pics.each do |pic|
@@ -12,3 +13,13 @@
 			%p.user
 				Submitted by
 				= pic.user.email
+%p User Pics Matching:
+#pics.transitions-enabled
+	- @pics.each do |pic|
+		- if pic.user.email.include?(@user_keywords)
+			.box.panel.panel-default
+				= link_to (image_tag pic.image.url), pic
+				%h2= link_to pic.title, pic
+				%p.user
+					Submitted by
+					= pic.user.email
