Moved searchbar to the main  navbar rather than having it be on a seperate page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
 %head
 	%title Pic Board
-	= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true 
+	= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags
 %body
@@ -10,9 +10,11 @@
 		.container
 			.navbar-brand= link_to "Pic Board", root_path
 
+			.content.nav.navbar-left.navbar-search.navbar-form 
+				= render 'search'
+
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
-					%li= link_to 'Search', search_path
 					%li= link_to "New Pic", new_pic_path
 					%li= link_to "Account", edit_user_registration_path
 					%li= link_to "Sign Out", destroy_user_session_path, method: :delete
@@ -24,5 +26,5 @@
 	.container
 		- flash.each do |name, msg|
 			= content_tag :div, msg, class: "alert alert-info"
-			
+
 		= yield
