--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 			.navbar-brand= link_to "Pic Board", root_path
 
 			.content.nav.navbar-left.navbar-search.navbar-form 
-				= render 'search'
+				= render :partial => 'pics/search'
 
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
