Added some more foundations for getting tags working, migrations needed

--- a/app/views/pics/_form.html.haml
+++ b/app/views/pics/_form.html.haml
@@ -15,6 +15,9 @@
 		= f.input :title, input_html: {class: 'form_control'}
 
 	.form-group
+		= f.input :tags, input_html: {class: 'form_control'}
+
+	.form-group
 		= f.input :description, input_html: {class: 'form_control'}	
 	
 	= f.button :submit, class: "btn btn-primary"	
