New tags can be created, still needs to have searching and attaching to images implemented, this commit requires new gems installed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require chosen
  *= require 'masonry/transitions'
  *= require_tree .
  *= require_self
  */
 
+@import "chosen";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
